--- a/style.css
+++ b/style.css
@@ -298,14 +298,13 @@ ul{
 
 #section3{
     /* background-color: springgreen; */
-    height: 40vh;
+    height: 30vh;
     width: 100vw;
     margin: 0;
     display: none;
     gap: 2vw;
     padding: 1%;
     position: relative;
-    margin-bottom: 15%;
 }
 
 #section3 #box1{
@@ -464,7 +463,7 @@ ul{
 .progress-bars{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -508,20 +507,15 @@ ul{
     width: 25%;
     height: 95%;
     backdrop-filter: blur(6px);
-
-    background-color: rgb(255, 255, 255);
-
-
     border-radius: 20px;
-
-    box-shadow: 35px 35px 68px 0px rgba(48, 48, 48, 0.6), inset -12px -12px 16px 0px rgba(95, 95, 95, 0.774), inset 0px 11px 28px 0px rgba(66, 66, 66, 0.856);
-
     display: flex;
+    background: #ffffff;
+    -webkit-box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff;
+    box-shadow: 12px 12px 24px #b2b8c9, -12px -12px 24px #f0f8ff;
     flex-direction: column;
     justify-content: center;
     padding-left: 1%;
     overflow-x: hidden;
-
     transition: 0.3s linear;
 }
 
@@ -1231,11 +1225,6 @@ footer h3{
         border-radius: 5px;
         padding: 2% 8%;
         font-size: 2.7vh;
-    }
-
-    #section3{
-    margin-bottom: 45%;
-        
     }
 
     #section3 #box1{
