--- a/style.css
+++ b/style.css
@@ -916,6 +916,40 @@ ul{
     border-radius: 10px;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7); /* Overlay background */
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 38%; /* Could be adjusted */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    font-size: 3vh;
+    font-weight: 600;
+    top: 0;
+    right: 3%;
+    padding: 10px;
+    cursor: pointer;
+}
+
+
 /* ---------footer-css---------- */
 footer{
     margin: 0;
@@ -1323,6 +1357,16 @@ footer h3{
     .section5 form #submit-btn{
         width: 25vw;
         font-weight: 400;
+    }
+
+    .close {
+        position: absolute;
+        font-size: 2vh;
+        font-weight: 600;
+        top: 0;
+        right: 0;
+        padding: 10px;
+        cursor: pointer;
     }
 
     .footer{
